WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134134
Snapshotting WKThumbnailViews should not tell Web processes backing unparented WKViews that they're in window
https://bugs.webkit.org/show_bug.cgi?id=134134
Summary
Snapshotting WKThumbnailViews should not tell Web processes backing unparente...
Tim Horton
Reported
2014-06-20 15:33:05 PDT
Re-evaluating our in-window state is only useful if we're going to use the live layer tree; snapshots can be taken of unparented views with no trouble. Plus, doing so sets off a chain of expensive things in the Web process which we can avoid if using snapshots.
Attachments
patch
(1.72 KB, patch)
2014-06-20 15:34 PDT
,
Tim Horton
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-06-20 15:34:15 PDT
Created
attachment 233468
[details]
patch
Tim Horton
Comment 2
2014-06-20 15:40:30 PDT
<
rdar://problem/17402119
>
Tim Horton
Comment 3
2014-06-20 15:41:13 PDT
http://trac.webkit.org/changeset/170217
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug